--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,17 @@
 	<build>
 		<finalName>gamutkart</finalName>
 	</build>
+	<distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>Sampath-releases</name>
+        <url>http://localhost:8081/artifactory/gamutkart</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>Sampath-snapshots</name>
+        <url>http://localhost:8081/artifactory/gamutkart</url>
+    </snapshotRepository>
+</distributionManagement>
 </project>
 
