--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
 		</dependency>
 			
 	</dependencies>
+	<distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>Sampath-releases</name>
+        <url>http://localhost:8081/artifactory/app</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>Sampath-snapshots</name>
+        <url>http://localhost:8081/artifactory/app</url>
+    </snapshotRepository>
+</distributionManagement>
 	<build>
 		<finalName>gamutkart</finalName>
 	</build>
